--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <div class="right">
     <h2>楊子鋐
     <!--  空格--> 
-    <SPAN>(Hung, Chih Ching )</SPAN>
+    <SPAN>(Jerry Yang)</SPAN>
     </h2>
     <H5>台灣大學電機系</H5>
       <!--  分隔線-->
     <HR></HR>
     <P>上天下地，唯我獨尊。
     <br>
-    <br>d96522004@ntu.edu.tw
+    <br>s010032@stu.hhsh.tn.edu.tw
     <br>台北市大安區羅斯福路4段1號
     </P>
   <!--  大圓區塊-->
